<?xml version="1.0" encoding="UTF-8" standalone="no"?>
<resources>
    <string name="app_name">munira_s_application7</string>
    <string name="loading">Loading…</string>
    <string name="no_internet_connection">No internet connection!</string>
    <string name="lbl_change_username">Change username</string>
    <string name="msg_confirm_passwor">confirm password</string>
    <string name="lbl_12_00">12:00 </string>
    <string name="lbl_francis_sktelz">Francis Sktelz</string>
    <string name="msg_already_have_an">already have an account? sign in</string>
    <string name="msg_get_medical_ass">get medical assistance anywhere anytime</string>
    <string name="lbl_we">We</string>
    <string name="lbl_fr">Fr</string>
    <string name="lbl_lorem">Lorem</string>
    <string name="msg_available_time">Available time slots</string>
    <string name="lbl_sign_in">sign in</string>
    <string name="msg_next_appointmen">Next Appointments</string>
    <string name="lbl_mo">Mo</string>
    <string name="lbl_ibra">        Ibra</string>
    <string name="lbl_notifications">Notifications</string>
    <string name="lbl_8_00_am">8:00 AM</string>
    <string name="lbl_tu">Tu</string>
    <string name="msg_all_your_medica">All your medical reports in one place </string>
    <string name="lbl_10_30_pm">10:30 pm</string>
    <string name="lbl_view"> view</string>
    <string name="lbl_9_00am2">9:00AM</string>
    <string name="lbl_marc_mbesu"> marc mbesu</string>
    <string name="msg_already_have_an2">already have an account? </string>
    <string name="msg_goodmorning_ian">Goodmorning ian!</string>
    <string name="lbl_30">30</string>
    <string name="lbl_31">31</string>
    <string name="lbl_3_10pm">3:10PM</string>
    <string name="lbl_su">Su</string>
    <string name="msg_sorem_ipsum_dol">Sorem ipsum dolor sit amet, consectetur adipiscing elit.</string>
    <string name="msg_borem_ipsum_dol">Borem ipsum dolor sit amet, consectetur adipiscing elit.</string>
    <string name="lbl_10_10am">10:10AM</string>
    <string name="lbl_habiba">      habiba </string>
    <string name="lbl_june_claire">   june claire</string>
    <string name="lbl_1_00_pm">1:00 PM</string>
    <string name="lbl_xysht">        xysht</string>
    <string name="lbl_enter_password">enter password</string>
    <string name="msg_dont_have_an_a2">dont  have an account? </string>
    <string name="lbl_th">Th</string>
    <string name="lbl_20">20</string>
    <string name="lbl_23">23</string>
    <string name="lbl_24">24</string>
    <string name="lbl_21">21</string>
    <string name="lbl_22">22</string>
    <string name="lbl_27">27</string>
    <string name="lbl_12_10pm">12:10PM</string>
    <string name="lbl_28">28</string>
    <string name="lbl_25">25</string>
    <string name="lbl_26">26</string>
    <string name="lbl_29">29</string>
    <string name="msg_appointments_re"> Appointments requests</string>
    <string name="lbl_sa">Sa</string>
    <string name="msg_enter_your_full">enter your full name</string>
    <string name="lbl_calendar">Calendar</string>
    <string name="lbl_4_10pm">4:10PM</string>
    <string name="msg_you_have_one_up">You have one upcoming meeting</string>
    <string name="lbl_9_00_am">9:00 AM</string>
    <string name="msg_yorem_ipsum_dol">Yorem ipsum dolor sit amet, consectetur adipiscing elit. Etiam eu turpis molestie, dictum est a, mattis tellus.  dignissim lus.</string>
    <string name="lbl_mary_nena2">Mary nena</string>
    <string name="msg_dont_have_an_a">dont  have an account? sign up</string>
    <string name="lbl_8_10am">8:10AM</string>
    <string name="lbl_12">12</string>
    <string name="lbl_13">13</string>
    <string name="lbl_get_started">                       Get Started</string>
    <string name="lbl_10">10</string>
    <string name="msg_you_have_one_3">You have one  3 requests. click to view</string>
    <string name="lbl_sign_up">sign up</string>
    <string name="lbl_11">11</string>
    <string name="lbl_16">16</string>
    <string name="lbl_17">17</string>
    <string name="lbl_mary_nena">mary Nena</string>
    <string name="lbl_14">14</string>
    <string name="lbl_15">15</string>
    <string name="lbl_18">18</string>
    <string name="lbl_19">19</string>
    <string name="lbl_11_00_am">11:00 AM</string>
    <string name="lbl_register">                            Register</string>
    <string name="lbl_3_00_pm">3:00 PM</string>
    <string name="msg_you_have_one_32">You have one  3 requests. click to</string>
    <string name="lbl_sean_kamau">   sean kamau</string>
    <string name="msg_book_your_conve">Book your convenient time slot</string>
    <string name="lbl_1">1</string>
    <string name="lbl_2">2</string>
    <string name="lbl_3">3</string>
    <string name="lbl_4">4</string>
    <string name="lbl_5">5</string>
    <string name="lbl_06">06</string>
    <string name="lbl_6">6</string>
    <string name="lbl_7">7</string>
    <string name="lbl_8">8</string>
    <string name="lbl_9">9</string>
    <string name="msg_goodmorning_fra">Goodmorning Francis!</string>
    <string name="lbl_1_10pm">1:10PM</string>
    <string name="lbl_forgot_password">forgot password</string>
    <string name="msg_enter_your_emai">enter your email</string>
    <string name="lbl_welcome_back">Welcome Back!</string>
    <string name="msg_welcome_onboard">Welcome OnBoard!</string>
    <string name="lbl_4_00_pm">4:00 PM</string>
    <string name="lbl_makena">    makena </string>
    <string name="lbl_settings">Settings</string>
    <string name="lbl_my_calendar">My Calendar</string>
    <string name="lbl_10_00_am">10:00 AM</string>
    <string name="lbl_delete_account">Delete Account</string>
    <string name="lbl_june">June</string>
    <string name="lbl_11_00am2">11:00AM</string>
    <string name="msg_book_appointmen">Book Appointment</string>
    <string name="title_activity_login_activitya">LoginActivitya</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="lorem_ipsum">
        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam in scelerisque sem. Mauris
        volutpat, dolor id interdum ullamcorper, risus dolor egestas lectus, sit amet mattis purus
        dui nec risus. Maecenas non sodales nisi, vel dictum dolor. Class aptent taciti sociosqu ad
        litora torquent per conubia nostra, per inceptos himenaeos. Suspendisse blandit eleifend
        diam, vel rutrum tellus vulputate quis. Aliquam eget libero aliquet, imperdiet nisl a,
        ornare ex. Sed rhoncus est ut libero porta lobortis. Fusce in dictum tellus.\n\n
        Suspendisse interdum ornare ante. Aliquam nec cursus lorem. Morbi id magna felis. Vivamus
        egestas, est a condimentum egestas, turpis nisl iaculis ipsum, in dictum tellus dolor sed
        neque. Morbi tellus erat, dapibus ut sem a, iaculis tincidunt dui. Interdum et malesuada
        fames ac ante ipsum primis in faucibus. Curabitur et eros porttitor, ultricies urna vitae,
        molestie nibh. Phasellus at commodo eros, non aliquet metus. Sed maximus nisl nec dolor
        bibendum, vel congue leo egestas.\n\n
        Sed interdum tortor nibh, in sagittis risus mollis quis. Curabitur mi odio, condimentum sit
        amet auctor at, mollis non turpis. Nullam pretium libero vestibulum, finibus orci vel,
        molestie quam. Fusce blandit tincidunt nulla, quis sollicitudin libero facilisis et. Integer
        interdum nunc ligula, et fermentum metus hendrerit id. Vestibulum lectus felis, dictum at
        lacinia sit amet, tristique id quam. Cras eu consequat dui. Suspendisse sodales nunc ligula,
        in lobortis sem porta sed. Integer id ultrices magna, in luctus elit. Sed a pellentesque
        est.\n\n
        Aenean nunc velit, lacinia sed dolor sed, ultrices viverra nulla. Etiam a venenatis nibh.
        Morbi laoreet, tortor sed facilisis varius, nibh orci rhoncus nulla, id elementum leo dui
        non lorem. Nam mollis ipsum quis auctor varius. Quisque elementum eu libero sed commodo. In
        eros nisl, imperdiet vel imperdiet et, scelerisque a mauris. Pellentesque varius ex nunc,
        quis imperdiet eros placerat ac. Duis finibus orci et est auctor tincidunt. Sed non viverra
        ipsum. Nunc quis augue egestas, cursus lorem at, molestie sem. Morbi a consectetur ipsum, a
        placerat diam. Etiam vulputate dignissim convallis. Integer faucibus mauris sit amet finibus
        convallis.\n\n
        Phasellus in aliquet mi. Pellentesque habitant morbi tristique senectus et netus et
        malesuada fames ac turpis egestas. In volutpat arcu ut felis sagittis, in finibus massa
        gravida. Pellentesque id tellus orci. Integer dictum, lorem sed efficitur ullamcorper,
        libero justo consectetur ipsum, in mollis nisl ex sed nisl. Donec maximus ullamcorper
        sodales. Praesent bibendum rhoncus tellus nec feugiat. In a ornare nulla. Donec rhoncus
        libero vel nunc consequat, quis tincidunt nisl eleifend. Cras bibendum enim a justo luctus
        vestibulum. Fusce dictum libero quis erat maximus, vitae volutpat diam dignissim.
    </string>
    <string name="title_activity_registration_activitya">RegistrationActivitya</string>
</resources>
