<?xml version="1.0" encoding="UTF-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:tools="http://schemas.android.com/tools">
    <data>
        <variable name="registrationVM" type="com.munirasapplication.app.modules.registration.data.viewmodel.RegistrationVM"/>
    </data>
    <LinearLayout android:gravity="end"
        android:id="@+id/linearRegistration"
        android:layout_height="match_parent"
        android:layout_width="match_parent"
        android:orientation="vertical" style="@style/groupStylegray_50">
        <FrameLayout android:id="@+id/frameStacktime"
            android:layout_gravity="start"
            android:layout_height="@dimen/_187pxv"
            android:layout_marginEnd="@dimen/_27pxh" android:layout_width="@dimen/_332pxh">

            <ImageView android:id="@+id/imageEllipseOne"
                android:layout_gravity="start"
                android:layout_height="@dimen/_187pxh"
                android:layout_marginEnd="@dimen/_10pxh"
                android:layout_width="@dimen/_137pxh"
                android:scaleType="fitXY"
                imageRes="@{@drawable/img_ellipse1}"
                tools:ignore="ContentDescription" tools:src="@drawable/img_ellipse1"/>
        </FrameLayout>
        <TextView android:ellipsize="end"
            android:id="@+id/txtWelcomeOnBoard"
            android:layout_gravity="center_horizontal"
            android:layout_height="wrap_content"
            android:layout_marginEnd="20.0dp"
            android:layout_marginStart="20.0dp"
            android:layout_marginTop="0dp"
            android:layout_width="wrap_content"
            android:singleLine="true"
            android:text="@{registrationVM.registrationModel.txtWelcomeOnBoard}"
            style="@style/txtPoppinssemibold18" tools:text="@string/msg_welcome_onboard"/>
        <TextView android:ellipsize="end"
            android:gravity="center_horizontal"
            android:id="@+id/txtGetmedicalass"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/_20pxh"
            android:layout_marginStart="@dimen/_20pxh"
            android:layout_marginTop="@dimen/_19pxv"
            android:layout_width="match_parent"
            android:lineSpacingExtra="@dimen/_7pxh"
            android:singleLine="true"
            android:text="@{registrationVM.registrationModel.txtGetmedicalass}"
            style="@style/txtPoppinsregular13_2" tools:text="@string/msg_get_medical_ass"/>
        <androidx.appcompat.widget.AppCompatButton
            android:ellipsize="end" android:gravity="center"
            android:id="@+id/btnEnterYourFullName"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/_20pxh"
            android:layout_marginStart="@dimen/_20pxh"
            android:layout_marginTop="@dimen/_35pxv"
            android:layout_width="match_parent"
            android:lineSpacingExtra="@dimen/_7pxh"
            android:paddingBottom="@dimen/_16pxv"
            android:paddingEnd="@dimen/_30pxh"
            android:paddingStart="@dimen/_30pxh"
            android:paddingTop="@dimen/_16pxv" android:singleLine="true"
            android:text="@string/msg_enter_your_full"
            android:textAllCaps="false" style="@style/btnSolidRounded_1" tools:text="@string/msg_enter_your_full"/>
        <androidx.appcompat.widget.AppCompatButton
            android:ellipsize="end" android:gravity="center"
            android:id="@+id/btnEnterYourEmailOne"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/_20pxh"
            android:layout_marginStart="@dimen/_20pxh"
            android:layout_marginTop="@dimen/_35pxv"
            android:layout_width="match_parent"
            android:lineSpacingExtra="@dimen/_7pxh"
            android:paddingBottom="@dimen/_16pxv"
            android:paddingEnd="@dimen/_30pxh"
            android:paddingStart="@dimen/_30pxh"
            android:paddingTop="@dimen/_16pxv" android:singleLine="true"
            android:text="@string/msg_enter_your_emai"
            android:textAllCaps="false" style="@style/btnSolidRounded_1" tools:text="@string/msg_enter_your_emai"/>
        <androidx.appcompat.widget.AppCompatButton
            android:ellipsize="end" android:gravity="center"
            android:id="@+id/btnEnterPassword"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/_20pxh"
            android:layout_marginStart="@dimen/_20pxh"
            android:layout_marginTop="@dimen/_35pxv"
            android:layout_width="match_parent"
            android:lineSpacingExtra="@dimen/_7pxh"
            android:paddingBottom="@dimen/_16pxv"
            android:paddingEnd="@dimen/_30pxh"
            android:paddingStart="@dimen/_30pxh"
            android:paddingTop="@dimen/_16pxv" android:singleLine="true"
            android:text="@string/lbl_enter_password"
            android:textAllCaps="false" style="@style/btnSolidRounded_1" tools:text="@string/lbl_enter_password"/>
        <androidx.appcompat.widget.AppCompatButton
            android:ellipsize="end" android:gravity="center"
            android:id="@+id/btnConfirmPasswordOne"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/_20pxh"
            android:layout_marginStart="@dimen/_20pxh"
            android:layout_marginTop="@dimen/_35pxv"
            android:layout_width="match_parent"
            android:lineSpacingExtra="@dimen/_7pxh"
            android:paddingBottom="@dimen/_16pxv"
            android:paddingEnd="@dimen/_30pxh"
            android:paddingStart="@dimen/_30pxh"
            android:paddingTop="@dimen/_16pxv" android:singleLine="true"
            android:text="@string/msg_confirm_passwor"
            android:textAllCaps="false" style="@style/btnSolidRounded_1" tools:text="@string/msg_confirm_passwor"/>
        <androidx.appcompat.widget.AppCompatButton
            android:ellipsize="end" android:gravity="center"
            android:id="@+id/btnRegisterOne"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/_20pxh"
            android:layout_marginStart="@dimen/_20pxh"
            android:layout_marginTop="@dimen/_35pxv"
            android:layout_width="match_parent"
            android:lineSpacingExtra="@dimen/_9pxh"
            android:paddingBottom="@dimen/_16pxv"
            android:paddingEnd="@dimen/_30pxh"
            android:paddingStart="@dimen/_30pxh"
            android:paddingTop="@dimen/_16pxv" android:singleLine="true"
            android:text="@string/lbl_register"
            android:textAllCaps="false" style="@style/btnSolid" tools:text="@string/lbl_register"/>
        <TextView android:ellipsize="end" android:gravity="start"
            android:id="@+id/txtConfirmation"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/_10pxv"
            android:layout_marginEnd="@dimen/_86pxh"
            android:layout_marginStart="@dimen/_38pxh"
            android:layout_marginTop="@dimen/_16pxv"
            android:layout_width="match_parent"
            android:lineSpacingExtra="@dimen/_7pxh"
            android:singleLine="true"
            android:text="@{registrationVM.registrationModel.txtConfirmation}"
            style="@style/txtPoppinsregular14" tools:text="@string/msg_already_have_an"/>
    </LinearLayout>
</layout>
